--- a/layers/poi/mapping.yaml
+++ b/layers/poi/mapping.yaml
@@ -82,6 +82,7 @@ def_poi_mapping_building: &poi_mapping_building
 # highway values , see http://taginfo.openstreetmap.org/keys/highway#values
 def_poi_mapping_highway: &poi_mapping_highway
   - bus_stop
+  - street_lamp
 
 # historic values , see http://taginfo.openstreetmap.org/keys/historic#values
 def_poi_mapping_historic: &poi_mapping_historic
@@ -114,6 +115,7 @@ def_poi_mapping_leisure: &poi_mapping_leisure
   - stadium
   - swimming_area
   - swimming_pool
+  - tree
   - water_park
 
 # office values , see http://taginfo.openstreetmap.org/keys/office#values
